--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="icon" href="./favicon.ico" type="image/x-icon">
   </head>
   <body>
-    <form id="maForm">
+    <form id="myForm">
         <input name="number1">
         <input name="number2">
     </form>
@@ -16,14 +16,6 @@
     <button onclick="divide()">/</button>
     <button onclick="multiply()">*</button>
     <div id="result"></div>
-    <style>
-        div{
-            border: 2px;
-            border-style:solid;
-            width: 195px;
-            height: 50px;
-        }
-    </style>
     <script src="index.js"></script>
   </body>
 </html>
