changed "<input" id

--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
   </head>
   <body>
     <form id="myForm">
-        <input name="number1">
-        <input name="number2">
+        <input name="number_one">
+        <input name="number_two">
     </form>
     <button onclick="plus()">+</button>
     <button onclick="minus()">-</button>
