changed function names

--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@
         <input name="number_one">
         <input name="number_two">
     </form>
-    <button onclick="plus()">+</button>
-    <button onclick="minus()">-</button>
-    <button onclick="divide()">/</button>
-    <button onclick="multiply()">*</button>
+    <button onclick="addition()">+</button>
+    <button onclick="substraction()">-</button>
+    <button onclick="division()">/</button>
+    <button onclick="multiplication()">*</button>
     <div id="result"></div>
     <script src="index.js"></script>
   </body>
